--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,14 +2,21 @@ version: "3.8"
 
 services:
   redis:
-    image: "redis:latest"
-    ports:
-      - "6379:6379"
+    image: redis:latest
+    command: ["redis-server", "--appendonly", "yes"]
 
   web:
-    build: .
+    build:
+      context: .
+      dockerfile: Dockerfile
     ports:
       - "8000:3000"
+      - "9000:8321"
+    environment:
+      - REDIS_URL=redis://redis:6379
     depends_on:
       - redis
+    links:
+      - redis
+    # need this line or react-app scripts will crash and exit with 0
     stdin_open: true
